<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:elevation="10dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="20dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:background="@drawable/boarder"
                android:backgroundTint="@color/primary_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Why Should You Donate Blood?"
                android:textStyle="bold"
                android:textSize="20dp"
                android:paddingTop="8dp" />
            <TextView
                android:gravity="start"
                android:layout_gravity="center"
                android:background="@drawable/boarder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"/>

            <TextView
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/primary_dark"
                android:background="@drawable/boarder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/eligibility_"
                android:textSize="20sp"
                android:paddingTop="8dp" />

            <TextView
                android:background="@drawable/boarder"
                android:gravity="start"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_"
                android:textSize="20sp"
                android:padding="10dp"/>

            <TextView
                android:background="@drawable/boarder"
                android:gravity="start"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="@string/female_"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</ScrollView>
